--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Welcome</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/style.css">
     
   </head>
   <body>
@@ -41,10 +43,45 @@
 
     <div class="container">
         <form action="/" method="POST">
+            <div class="row">
+                <div class="col">
+                    <label for="InputTitle">Title</label>
+                    <input type="text" class="form-control" name="title" id="InputTitle" >
+                </div>
+                <div class="col">
+                    <label for="InputName">Name</label>
+                    <input type="text" class="form-control" name="name" id="InputName" placeholder="e.g. First, Last">
+                  </div>
+            </div>
+            
             <div class="form-group">
-            <input type="url" placeholder="Image URL" name="image" /></div>
-            <input type="text" placeholder="Description" name="description" />
-            <input type="submit" value="Create New Artist"/>
+                <label for="InputImageLink">Image URL</label>
+                <input type="url" class="form-control" name="image" id="InputImageLink">
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <label for="InputCategory">Project Category</label>
+                    <input type="text" class="form-control" name="type" id="InputCategory" >
+                </div>
+                <div class="col">
+                    <label for="InputDifficulty">Difficulty (1-5)</label>
+                    <input type="number" class="form-control" max="5" min="1" name="level" id="InputDifficulty">
+                  </div>
+            </div>
+
+              <div class="form-group" id="add-links">
+                <label for="InputAddLinks">Additional Links</label><button type="button" class="btn btn-outline-secondary" id="more-links">Click to add more Links</button>
+                <input type="url" class="form-control" name="links" id="InputAddLinks" value="http://">
+            </div>
+
+            <div class="form-group">
+                <label for="InputDescription">Description</label>
+                <textarea class="form-control" id="InputDescription" name="description" cols="2" rows="5" placeholder="Write a short description/summary about project"></textarea>
+            </div>      
+
+                <input type="submit" value="Submit Project Entry"/>
+            
         </form>
     </div>
 
