--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,7 +7,7 @@
     <title>Welcome</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="">    
+    <link rel="stylesheet" href="/style.css">    
     </head>
     <body>
         <nav class="navbar  navbar-expand-sm navbar-light bg-danger">
@@ -41,11 +41,22 @@
 
 
 
-        <div class="container justify-content-center">
-            
-            <div class="row p-3"><img src="<%=artist.image%>" alt=""  width="500px"></a></div>
-            <div class="row text-justify"></div><%=artist.description%></div>
-            
+        <div class="container justify-content-center row m-auto" style="width: 1000px;">
+            <div class="col p-3" >
+                <img src="<%=artist.image%>" alt=""  width="500px">
+            </div>
+            <div class="col p-3 text-justify overflow-auto" style="height: 500px;">
+                <a href="/<%=artist.id%>/edit"><button type="button">Edit Post</button></a> <br>
+                <b>Title: </b><%=artist.title%> <br>
+                <b>Creator: </b><%=artist.name%> <br>
+                <b>Category: </b><%=artist.type%> <br> 
+                <b>Difficulty Level: </b><%=artist.level%> <br>
+                <b>Additional Links:</b>
+                <% for(let i=0;i<artist.links.length;i++){%>
+                    <a href="<%=artist.links[i]%>" target="_blank">Link <%=i+1%> </a>
+                <%}%> <br><br>
+                <%=artist.description%>
+            </div>
         </div>
 
 
