--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Welcome</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
-    <script src="app.js" charset="utf-8"></script>
+    <script src="/app.js" charset="utf-8"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
@@ -30,11 +30,6 @@
                     <li class="nav-item active">
                         <a href="/new" class="nav-link">
                             New
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="/edit" class="nav-link">
-                            Edit
                         </a>
                     </li>
                 </ul>
@@ -64,16 +59,18 @@
                 <label for="InputCategory">Project Category</label>
                 <input type="text" class="form-control" name="type" id="InputCategory" value="<%=artist.type%>">
             </div>
-            <div class="col">
-                <label for="InputDifficulty">Difficulty</label>
-                <input type="number" class="form-control" max="5" min="1" name="level" id="InputDifficulty" value="<%=artist.level%>">
-              </div>
+            
             </div>
 
             <div class="form-group" id="add-links">
             <label for="InputAddLinks">Additional Links</label><button type="button" class="btn btn-outline-secondary" id="more-links">Click to add more Links</button>
               <%for(let i=0; i<artist.links.length; i++){%>
+                <%if(artist.links[i]=== ""){%>
+                    
+                <%}else{%>
                 <input type="url" class="form-control" name="links" id="InputAddLinks" value="<%=artist.links[i]%>">
+                <%}%>
+                
                 <%}%>
             </div>
 
@@ -96,7 +93,7 @@
 
     
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </html>
