--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,12 +45,7 @@
                         <a href="/new" class="nav-link">
                             New
                         </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="/edit" class="nav-link">
-                            Edit
-                        </a>
-                    </li>
+                    </li>                    
                     <li class="nav-item active">
                         <a href="/seed" class="nav-link">
                             Seed
@@ -70,9 +65,9 @@
                 <div class="row row-cols-lg-3 ">
                     <% for(let i = 0; i < artist.length; i++){ %>
                     <a href="/show/<%=artist[i].id%>" style="text-decoration: none;">
-                    <div class="col m-3 align-self-end" style="background: url(<%=artist[i].image%>) center no-repeat; background-size: cover; width: 300px; height: 300px; text-align: center;" >
-                        <span style="color: white; justify-self: center;"><%=artist[i].title%> <br>By<br> <%=artist[i].name%></span>
-                        <!-- <img src="<%=artist[i].image%>" alt=""  width="300"> -->
+                    <div class="col m-3 align-self-end">
+                        <!-- <span style="color: white; justify-self: center;" id="index-title" ><%=artist[i].title%> <br>By<br> <%=artist[i].name%></span> -->
+                        <img src="<%=artist[i].image%>" alt=""  width="300">
                     </div></a>
                     <% } %>
                     </div>
