--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Welcome</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
-    <script src="app.js" charset="utf-8"></script>
+    <script src="/app.js" charset="utf-8"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
@@ -32,11 +32,6 @@
                             New
                         </a>
                     </li>
-                    <li class="nav-item active">
-                        <a href="/edit" class="nav-link">
-                            Edit
-                        </a>
-                    </li>
                 </ul>
             </div>
       </nav>
@@ -50,7 +45,7 @@
                 </div>
                 <div class="col">
                     <label for="InputName">Name</label>
-                    <input type="text" class="form-control" name="name" id="InputName" placeholder="e.g. First, Last">
+                    <input type="text" class="form-control" name="name" id="InputName" >
                   </div>
             </div>
             
@@ -64,14 +59,11 @@
                     <label for="InputCategory">Project Category</label>
                     <input type="text" class="form-control" name="type" id="InputCategory" >
                 </div>
-                <div class="col">
-                    <label for="InputDifficulty">Difficulty (1-5)</label>
-                    <input type="number" class="form-control" max="5" min="1" name="level" id="InputDifficulty">
-                  </div>
+                
             </div>
 
               <div class="form-group" id="add-links">
-                <label for="InputAddLinks">Additional Links</label><button type="button" class="btn btn-outline-secondary" id="more-links">Click to add more Links</button>
+                <label for="InputAddLinks">Additional Links</label><button type="button" class="btn btn-outline-primary" id="more-links">Click to add more Links</button>
                 <input type="url" class="form-control" name="links" id="InputAddLinks" value="http://">
             </div>
 
