--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,22 @@
+/* *{
+    border: 1px solid blue;
+} */
+body{
+    border: none;
+    background-color: rgb(0, 0, 0, 0.25);
+}
+
+
+
 .index-list{
     color: red;
 }
 #index-title:hover{
     color: black;
+}
+.index-image:hover{
+    padding: 5px;
+}
+.background-space{
+    background-color: rgb(0, 0, 0, 0.25);
 }
