--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Welcome</title>
+    <title>Submit | Project Showcase</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
     <script src="/app.js" charset="utf-8"></script>
     <!-- Bootstrap CSS -->
@@ -13,30 +13,30 @@
     
   </head>
   <body>
-      <nav class="navbar  navbar-expand-sm navbar-light bg-warning">
-        <a href="" class="navbar-brand mb-0 h1">
-            <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30">
-            New Page</a>
+      <nav class="navbar  navbar-expand-sm navbar-dark bg-warning">
+        <a href="/" class="navbar-brand mb-0 h1">
+            <img class="d-inline-block align-top" src="/icon.png" width="30" height="30">
+            Project Showcase</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"><span class="navbar-toggler-icon"></span></button>
             <div 
-                class="collapse navbar-collapse" 
+                class="collapse navbar-collapse justify-content-end" 
                 id="navbarMenu">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a href="/" class="nav-link active">
-                            Index
+                            Home
                         </a>
                     </li>
                     <li class="nav-item active">
                         <a href="/new" class="nav-link">
-                            New
+                            Submit Project
                         </a>
                     </li>
                 </ul>
             </div>
       </nav>
 
-    <div class="container">
+    <div class="container rounded-lg p-3">
         <form action="/" method="POST">
             <div class="row">
                 <div class="col">
@@ -49,8 +49,8 @@
                   </div>
             </div>
             
-            <div class="form-group">
-                <label for="InputImageLink">Image URL</label>
+            <div class="form-group" id="add-image-link">
+                <label for="InputImageLink">Image URLs&emsp;</label><button type="button" class="btn btn-secondary rounded-pill" id="image-links">Click to add more Images</button>
                 <input type="url" class="form-control" name="image" id="InputImageLink">
             </div>
 
@@ -63,7 +63,7 @@
             </div>
 
               <div class="form-group" id="add-links">
-                <label for="InputAddLinks">Additional Links</label><button type="button" class="btn btn-outline-primary" id="more-links">Click to add more Links</button>
+                <label for="InputAddLinks">Additional Links&emsp;</label><button type="button" class="btn btn-secondary rounded-pill" id="more-links">Click to add more Links</button>
                 <input type="url" class="form-control" name="links" id="InputAddLinks" value="http://">
             </div>
 
@@ -72,7 +72,7 @@
                 <textarea class="form-control" id="InputDescription" name="description" cols="2" rows="5" placeholder="Write a short description/summary about project"></textarea>
             </div>      
 
-                <input type="submit" value="Submit Project Entry"/>
+                <input type="submit" value="Submit Project Entry" class="btn btn-success rounded-pill"/>
             
         </form>
     </div>
