--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,29 +4,29 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Welcome</title>
+    <title><%=artist.title%> | Project Showcase</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">    
     </head>
     <body>
-        <nav class="navbar  navbar-expand-sm navbar-light bg-danger">
-            <a href="" class="navbar-brand mb-0 h1">
-                <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30">
-                Show Page</a>
+        <nav class="navbar  navbar-expand-sm navbar-dark bg-danger">
+            <a href="/" class="navbar-brand mb-0 h1">
+                <img class="d-inline-block align-top" src="/icon.png" width="30" height="30">
+                Project Showcase</a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"><span class="navbar-toggler-icon"></span></button>
                 <div 
-                    class="collapse navbar-collapse" 
+                    class="collapse navbar-collapse justify-content-end" 
                     id="navbarMenu">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
                             <a href="/" class="nav-link active">
-                                Index
+                                Home
                             </a>
                         </li>
                         <li class="nav-item active">
                             <a href="/new" class="nav-link">
-                                New
+                                Submit Project
                             </a>
                         </li>
                     </ul>
@@ -36,12 +36,47 @@
 
 
 
-        <div class="container justify-content-center row m-auto" style="width: 1000px;">
-            <div class="col p-3" >
-                <img src="<%=artist.image%>" alt=""  width="500px">
+        <div class="container row row-cols-sm m-auto">
+            <div class="col p-3 d-flex justify-content-center" >
+                <!-- <img src="<%=artist.image%>" alt=""  style="height:75vh;"> -->
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <%for(let i=0; i<artist.image.length; i++){%>
+                            <%if(i === 0){%>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="<%=i%>" class="active"></li>
+                            <%}else{%>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="<%=i%>"></li>                                    
+                            <%}%>
+                        <%}%>                      
+                    </ol>
+                    <div class="carousel-inner">
+                        <%for(let i=0; i<artist.image.length; i++){%>
+                            <%if(i === 0){%>
+                                <div class="carousel-item active" data-interval="5000">
+                                    <img src="<%=artist.image[i]%>" class="d-block w-100" alt="...">
+                                </div>
+                            <%}else{%>
+                                <div class="carousel-item"data-interval="5000">
+                                    <img src="<%=artist.image[i]%>" class="d-block w-100" alt="...">
+                                </div>                                    
+                            <%}%>
+                        <%}%>
+                    </div>                      
+                    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </button>
+                  </div>
+
             </div>
-            <div class="col p-3 text-justify overflow-auto" style="height: 500px;">
-                <a href="/<%=artist.id%>/edit"><button type="button" class="btn btn-primary">Edit Post</button></a><form action="/<%=artist.id%>?_method=DELETE" method="POST"><button type="submit" class="btn btn-danger">Delete Post</button></form> <br>
+            <div class="col-lg p-3 text-justify overflow-auto align-self-center" style="height: 75vh;">
+                <a href="/<%=artist.id%>/edit"><button type="button" class="btn btn-primary">Edit Post</button></a>
+                <form action="/<%=artist.id%>?_method=DELETE" method="POST"><button type="submit" class="btn btn-danger">Delete Post</button></form> <br>
                 <b>Title: </b><%=artist.title%> <br>
                 <b>Creator: </b><%=artist.name%> <br>
                 <b>Category: </b><%=artist.type%> <br>
