--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar  navbar-expand-sm navbar-dark bg-primary">
         <a href="/" class="navbar-brand mb-0 h1">
-            <img class="d-inline-block align-top" src="/icon.PNG" width="30" height="30" >
+            <img class="d-inline-block align-top" src="/icon.PNG" width="30" height="30" >&emsp;Project Showcase</a>
             <!-- <svg width="30px" height="30px" viewBox="0 0 237 230" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Adding-layers" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" opacity="0.938220796">
                     <g id="iMac-21.5&quot;" transform="translate(-856.000000, -402.000000)" fill="#69228D" stroke="#69228D">
@@ -28,7 +28,7 @@
                     </g>
                 </g>
             </svg> -->
-            Project Showcase</a>
+            
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarMenu">
                 <ul class="navbar-nav">
