--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,7 +12,7 @@
     <body>
         <nav class="navbar  navbar-expand-sm navbar-dark bg-danger">
             <a href="/" class="navbar-brand mb-0 h1">
-                <img class="d-inline-block align-top" src="/icon.png" width="30" height="30">&emsp;Project Showcase</a>
+                <img class="d-inline-block align-top" src="/icon.PNG" width="30" height="30">&emsp;Project Showcase</a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"><span class="navbar-toggler-icon"></span></button>
                 <div 
                     class="collapse navbar-collapse justify-content-end" 
