--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
 } */
 body{
     border: none;
-    background-color: rgb(0, 0, 0, 0.25);
+    background-image: url(https://media.istockphoto.com/vectors/stationery-background-school-tools-seamless-pattern-art-education-vector-id1199384244?k=20&m=1199384244&s=612x612&w=0&h=fb0EJzS-IlYnJ06IW1aAEE2tbuFlKff_KCLcIrha38g=);
 }
 
 
