--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -35,7 +35,8 @@
             </div>
       </nav>
 
-      <div class="container">
+      <div class="container-fluid vh-100" id="backdrop">
+      <div class="container rounded-lg p-3" style="background-color: rgb(200, 196, 196,.9);border: 1px solid white;">
         <form action="/<%=artist.id%>?_method=PUT" method="POST">
             <div class="row">
                 <div class="col">
@@ -88,7 +89,7 @@
             
         </form>
     </div>
-
+</div>
 
 
 
