removed seed and clear links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
                             Submit Project
                         </a>
                     </li>                    
-                    <li class="nav-item active">
+                    <!-- <li class="nav-item active">
                         <a href="/seed" class="nav-link">
                             Seed
                         </a>
@@ -36,7 +36,7 @@
                         <a href="/Clear" class="nav-link">
                             Clear
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
     </nav>
