--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,45 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Home | Project Showcase</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
-    
-  </head>
+    <%- include('./partials/head.ejs')%>
   <body>
-    <nav class="navbar  navbar-expand-sm navbar-dark bg-primary">
-        <a href="/" class="navbar-brand mb-0 h1">
-            <img class="d-inline-block align-top" src="/icon.PNG" width="30" height="30">&emsp;Project Showcase</a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarMenu">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a href="/" class="nav-link active">
-                            Home
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="/new" class="nav-link">
-                            Submit Project
-                        </a>
-                    </li>                    
-                    <!-- <li class="nav-item active">
-                        <a href="/seed" class="nav-link">
-                            Seed
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="/Clear" class="nav-link">
-                            Clear
-                        </a>
-                    </li> -->
-                </ul>
-            </div>
-    </nav>
+    <%- include('./partials/header.ejs')%>
     <div class="container-fluid vh-100 overflow-auto" id="">
         <div class="row row-cols-sm p-3 justify-content-center">
 
@@ -72,7 +35,7 @@
     </div>
     
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </html>
