--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,41 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%=artist.title%> | Project Showcase</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">    
-    </head>
+    <%- include('./partials/head.ejs')%>
     <body>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
-            <a href="/" class="navbar-brand mb-0 h1">
-                <img class="d-inline-block align-top" src="/icon.PNG" width="30" height="30">&emsp;Project Showcase</a>
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"><span class="navbar-toggler-icon"></span></button>
-                <div 
-                    class="collapse navbar-collapse justify-content-end" 
-                    id="navbarMenu">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a href="/" class="nav-link active">
-                                Home
-                            </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a href="/new" class="nav-link">
-                                Submit Project
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-        </nav>
-
-
-
-        
-
+        <%- include('./partials/header.ejs')%>
         <div class="container-fluid vh-100" id="backdrop">
         <div class="container row row-cols-sm m-auto">
             <div class="col p-3 d-flex justify-content-center" >
@@ -76,10 +43,12 @@
 
             </div>
             <div class="col-lg p-3 text-justify align-self-center rounded-lg" style="height: 65vh;background-color: rgb(186, 184, 184,.9);border: 1px solid white;">
+            <% if(currentUser){%>
                 <div class="row pl-2">
-                <a href="/<%=artist.id%>/edit"><button type="button" class="btn btn-primary mr-3">Edit Post</button></a>
-                <form action="/<%=artist.id%>?_method=DELETE" method="POST"><button type="submit" class="btn btn-danger">Delete Post</button></form>
-            </div>
+                    <a href="/<%=artist.id%>/edit"><button type="button" class="btn btn-primary mr-3">Edit Post</button></a>
+                    <form action="/<%=artist.id%>?_method=DELETE" method="POST"><button type="submit" class="btn btn-danger">Delete Post</button></form>
+                </div>
+            <%}%>
             <div class="col">
                 <div class="row"><b>Title: </b><%=artist.title%></div> 
                 <div class="row"><b>Creator: </b><%=artist.name%></div>
